--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "intro-to-mongoose-lab",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
     "mongoose": "^8.12.1",
